fix swagger config
